#7までやった。

--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <title>CSS Layout Practice</title>
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+  <header>
+    <div class="container">
+      header
+    </div>
+  </header>
+  <main>
+      <div class="container clear">
+        <div id="left">Left</div>
+        <div id="right">Right</div>
+      </div>
+  </main>
+  <footer>
+    <div class="container">
+      footer
+    </div>
+  </footer>
 </body>
 </html>
