--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <header>
-    <div class="container">
+    <div class="container clearfix">
       header
     </div>
   </header>
   <main>
-      <div class="container clear">
+      <div class="">
         <div id="left">Left</div>
         <div id="right">Right</div>
       </div>
